# quantization-notes

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
notebooks/: post_training_quantization.ipynb  quantization_modes.ipynb
quantization_notes/: quantization_modes.py
quantization_notes/utils/: utils.py
src/quantization/: utils.py
